--- a/exercicios/desafios/estilo/style.css
+++ b/exercicios/desafios/estilo/style.css
@@ -1,12 +1,23 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Sriracha&display=swap');
+
+:root{
+    --font1:verdana, Geneva, tahoma, sans-serif;
+    --font2: 'Passion One', cursive;
+    --font3: 'Sriracha', cursive;
+}
 *{
     margin: 0px;
     padding: 0px;
+    font-size: 1em;
 }
 html, body{
     min-height: 100vh;
     background-color: darkgray;
+    font-family: var(--font1)
 }
 header{
     background-color:black;
@@ -16,9 +27,12 @@ header{
 header h1{
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--font2);
+    font-size: 8vw;
 }
 header > p {
    padding-bottom: 50px;
+   font-size: 2.8vw;
 }
 
 header  a, footer  a {
@@ -32,6 +46,8 @@ header a:hover, footer a:hover{
 section {
     padding: 10vh;
     line-height: 2em;
+    font-family: var(--font3);
+    font-size: 3.5vw;
 }
 section.normal{
     background-color: white;
@@ -41,9 +57,10 @@ section.imagem{
     color: white
 }
 section.imagem> p{
-    width: 300px;
+    display: inline-block;
     background-color: rgba(0, 0, 0, 0.438);
-    padding-left: 10px;
+    padding: 10px;
+
 }
 footer{
     background-color:black;
