--- a/exercicios/desafios/d012/estilo/style.css
+++ b/exercicios/desafios/d012/estilo/style.css
@@ -64,17 +64,17 @@ section.imagem{
 }
 section.imagem> p{
     display: inline-block;
-    background-color: rgba(0, 0, 0, 0.575);
+    background-color: rgba(0, 0, 0, 0.637);
     padding: 10px;
     text-shadow: 2px 2px 0px black;
 
 }
 section#img01{
-   background-image: url(../d012/imagens/background001.jpg); 
+   background-image: url(../imagens/background001.jpg); 
    background-position: right center;
 }
 section#img02{
-   background-image: url(./d012/imagens/background002.jpg);
+   background-image: url(../imagens/background002.jpg);
    background-position:right center;
 }
 footer{
